css/style.css
html,
body {
  margin: 0;
  padding: 0;
}

#container {
  position: relative;
  white-space: nowrap;
  overflow-x: hidden;
  touch-action: manipulation;
}

#canvas {
  background-color: #0f0;
  overflow-y: hidden;
}

#about {
  position: absolute;
  background-color: transparent;
  word-wrap: break-word;
  overflow-wrap: break-word;
  white-space: normal;
  font-family: Consolas, monaco, monospace;
  font-size: vw + vh; /* Adjust the font size based on viewport width */
  color: blue;
  width: 61.8%;
  left: 19.1%;
  top: 33%;
  pointer-events: none;
  overflow-y: hidden;
}

#article-container {
  position: absolute;
  pointer-events: none;
  background-color: transparent;
  width: 61.8%; /* inv golden */
  height: 75%;
  left: 19.1%; /* half inv golden remainder */
  word-wrap: break-word;
  overflow-wrap: break-word;
  white-space: normal;
  font-family: Consolas, monaco, monospace;
  color: blue;
}

.fade-out {
  opacity: 0;
  transition: opacity 1s;
}

.no-pointer-events {
  pointer-events: none;
}

